gccida/c1/dwarf2out_stack_adjust
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_stack_adjust/src/dwarf2out.c:1471:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v2 = ( __int64)insn[2]; 
               ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_stack_adjust/src/dwarf2out.c:1504:7: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
v5 = -args_size_0; 
      ^~~~~~~~~~~
      args_size
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_stack_adjust/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_stack_adjust/src/dwarf2out.c:1511:6: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
v7 = args_size_0 + v5; 
     ^~~~~~~~~~~
     args_size
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_stack_adjust/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_stack_adjust/src/dwarf2out.c:1514:1: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
args_size_0 = v6; 
^~~~~~~~~~~
args_size
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_stack_adjust/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_stack_adjust/src/dwarf2out.c:1516:12: error: use of undeclared identifier 'dwarf2out_cfi_label_label'; did you mean 'dwarf2out_cfi_label'?
def_cfa_1( dwarf2out_cfi_label_label, &cfa); 
           ^~~~~~~~~~~~~~~~~~~~~~~~~
           dwarf2out_cfi_label
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_stack_adjust/src/dwarf2out.c:540:1: note: 'dwarf2out_cfi_label' declared here
dwarf2out_cfi_label ()
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_stack_adjust/src/dwarf2out.c:1517:6: error: use of undeclared identifier 'args_size_0'; did you mean 'args_size'?
v3 = args_size_0; 
     ^~~~~~~~~~~
     args_size
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_stack_adjust/src/dwarf2out.c:645:13: note: 'args_size' declared here
static long args_size;
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_stack_adjust/src/dwarf2out.c:1518:6: error: use of undeclared identifier 'dwarf2out_cfi_label_label'; did you mean 'dwarf2out_cfi_label'?
v4 = dwarf2out_cfi_label_label; 
     ^~~~~~~~~~~~~~~~~~~~~~~~~
     dwarf2out_cfi_label
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_stack_adjust/src/dwarf2out.c:540:1: note: 'dwarf2out_cfi_label' declared here
dwarf2out_cfi_label ()
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_stack_adjust/src/dwarf2out.c:1521:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v8 = (  struct rtx_def *)insn[2]; 
                         ^~~~~~~
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/dwarf2out_stack_adjust/src/obj/dwarf2out.o] Error 1
